# order-matters

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/component/: action_buttons.h  data_type_select.h  data_type_selection.h  main_menu.h  struct_builder.h  struct_output.h
include/model/: struct_model.h
include/struct/: builder.h  data_type_member.h
src/: main.cpp
src/component/: action_buttons.cpp  data_type_selection.cpp  main_menu.cpp  struct_builder.cpp  struct_output.cpp
src/struct/: builder.cpp
